@@ -1,3 +1,4 @@
+AUTHOR_VIA_LIST|<#1#> via ezmlm|<#1#> via ezmlm
 ERR_ADDR_AT|address does not contain @|address does not contain @
 ERR_ADDR_LONG|address is too long|address is too long
 ERR_ADDR_NL|address contains newline|address contains newline
